// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React should allow using hooks 1`] = `
<h1>
  bar!
</h1>
`;

exports[`React should handle arrays 1`] = `
<ul>
  <li>
    foo
  </li>
  <li>
    bar
  </li>
</ul>
`;

exports[`React should handle arrays 2`] = `
<ul>
  <li>
    foo
  </li>
  <li>
    bar
  </li>
  <li>
    baz
  </li>
</ul>
`;

exports[`React should render on object add and remove 1`] = `
<h1>
  does not exist
</h1>
`;

exports[`React should render on object add and remove 2`] = `
<h1>
  bar
</h1>
`;

exports[`React should render on object add and remove 3`] = `
<h1>
  does not exist
</h1>
`;
